<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Battery Test</string>
    <string name="app_short_name" translatable="false">BTX</string>
    <string name="title_home">Home</string>
    <string name="title_config">Config</string>
    <string name="title_chart">Chart</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_language">Language</string>
    <string name="title_chart_on">Show Chart</string>
    <string name="title_chart_off">Hide Chart</string>
    <string name="title_download">Download</string>
    <string name="title_start">Start</string>
    <string name="title_stop">Stop</string>

    <string name="button_pick_date">Pick Date</string>
    <string name="button_pick_time">Pick Time</string>
    <string name="button_input">Input</string>
    <string name="button_plan">Plan</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_black">Black</string>
    <string name="button_once">Once</string>
    <string name="button_clear">Clear</string>
    <string name="button_crash">Crash</string>
    <string name="button_search">Search</string>
    <string name="button_reset">Reset</string>

    <string name="header_input_number">Input Number</string>

    <string name="label_for_text_date">Date</string>
    <string name="label_for_text_time">Time</string>
    <string name="label_for_text_test_period">Period [Second] : </string>
    <string name="label_for_switch_screen_always_on">Keep screen always on?</string>
    <string name="label_for_text_screen_time">Screen time [Seconds] : </string>
    <string name="label_for_switch_web_request">Make WEB request?</string>
    <string name="label_for_switch_gps_request">Make GSP request?</string>
    <string name="label_for_switch_ble_request">Make BLE request?</string>
    <string name="label_for_switch_record_battery">Record battery level?</string>
    <string name="label_for_radio_minute">Minute</string>
    <string name="label_for_radio_hour">Hour</string>

    <string name="msg_past_time_warning">Cannot plan for past time</string>
    <string name="msg_frequency_warning">Frequency must greater than zero</string>
    <string name="msg_test_start">Battery test has been started.</string>
    <string name="msg_test_stop">Battery test has been stopped.</string>
    <string name="msg_permissions_not_grant">Permissions do not grant.</string>
    <string name="msg_database_downloaded_success">Database has been downloaded.</string>
    <string name="msg_database_deleted_data">Database data has been deleted.</string>
    <string name="msg_background_task_is_running">Background task is running.</string>
    <string name="msg_charging">Charging</string>
    <string name="msg_not_charging">Not charging</string>
    <string name="msg_testing">Testing</string>
    <string name="msg_not_testing">Not testing</string>

    <string name="button_language_chinese" translatable="false">中文</string>
    <string name="button_language_english" translatable="false">English</string>

    <string name="chart_minute">minute</string>
    <string name="chart_hour">hour</string>
    <string name="chart_description_hour">Power percentage over current hour</string>
    <string name="chart_description_day">Power percentage over current day</string>

    <string name="lang_chinese" translatable="false">zh</string>
    <string name="lang_english" translatable="false">en</string>
    <string name="pref_language_code" translatable="false">pref_language_code</string>
    <string name="pref_screen_always_on" translatable="false">pref_screen_always_on</string>
    <string name="pref_cpu_always_on" translatable="false">pref_cpu_always_on</string>
    <string name="pref_web_request" translatable="false">pref_web_request</string>
    <string name="pref_gps_request" translatable="false">pref_gps_request</string>
    <string name="pref_ble_request" translatable="false">pref_ble_request</string>
    <string name="pref_test_bgn_date" translatable="false">pref_test_bgn_date</string>
    <string name="pref_test_bgn_time" translatable="false">pref_test_bgn_time</string>
    <string name="pref_chart_date" translatable="false">pref_chart_date</string>
    <string name="pref_chart_time" translatable="false">pref_chart_time</string>
    <string name="pref_test_period_seconds" translatable="false">pref_test_period_seconds</string>
    <string name="pref_screen_seconds" translatable="false">pref_screen_seconds</string>
    <string name="pref_show_chart" translatable="false">pref_show_chart</string>
    <string name="pref_chart_type" translatable="false">pref_chart_type</string>
    <string name="pref_record_battery" translatable="false">pref_record_battery</string>
    <string name="flag_state_test_started" translatable="false">flag_state_test_started</string>
    <string name="data_test_next_execution_time" translatable="false">data_test_next_execution_time</string>
    <string name="data_gps_location" translatable="false">data_gps_location</string>
    <string name="data_ble_device_count" translatable="false">data_ble_device_count</string>
    <string name="data_web_request" translatable="false">data_web_request</string>
    <string name="data_web_battery_level" translatable="false">data_web_battery_level</string>
</resources>