<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding"
    tools:context=".Fragment.ChartFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layoutDashboardLineChart">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Switch
                android:id="@+id/switchRecordBattery"
                android:tag="@string/pref_record_battery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_for_switch_record_battery"
                android:textOn="on"
                android:textOff="off"
                android:checked="false"
                android:visibility="gone"
                style="@style/BaseSwitchStyle" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textViewDate"
                    android:tag="@string/pref_chart_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/label_for_text_date" />
                <com.daniel4wong.core.Ui.InputButton
                    android:id="@+id/buttonPickDate"
                    android:tag="@string/pref_chart_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:is_date_picker="true"
                    android:text="@string/button_pick_date" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textViewTime"
                    android:tag="@string/pref_chart_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/label_for_text_time" />
                <com.daniel4wong.core.Ui.InputButton
                    android:id="@+id/buttonPickTime"
                    android:tag="@string/pref_chart_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:is_time_picker="true"
                    android:text="@string/button_pick_time" />
            </RelativeLayout>
            <RadioGroup
                android:id="@+id/radioGroupChartType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:tag="@string/pref_chart_type">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/chart_hour"
                    android:text="@string/label_for_radio_hour" />
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:tag="@string/chart_minute"
                    android:text="@string/label_for_radio_minute" />
            </RadioGroup>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <Button
                        android:id="@+id/buttonSearch"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_search" />
                    <Button
                        android:id="@+id/buttonReset"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_reset" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:id="@+id/layoutDashboardLineChart"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintBottom_toBottomOf="parent">
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="2dp" />
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>