<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_start"
        android:icon="@drawable/ic_start_circle_white_24dp"
        android:title="@string/title_start"
        app:showAsAction="always" />

    <item android:id="@+id/menu_stop"
        android:icon="@drawable/ic_stop_circle_white_24dp"
        android:title="@string/title_stop"
        app:showAsAction="always" />

    <item android:id="@+id/menu_download"
        android:icon="@drawable/ic_download_white_24dp"
        android:title="@string/title_download"
        app:showAsAction="always" />

    <item android:id="@+id/menu_language"
        android:icon="@drawable/ic_language_white_24dp"
        android:title="@string/title_language"
        app:showAsAction="always" />

</menu>