<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_padding"
    tools:context=".Fragment.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/layoutHomeLineChart">
        <LinearLayout
            android:id="@+id/layout_test_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:tag="@string/pref_test_bgn_date"
                    android:text="@string/label_for_text_date" />
                <com.daniel4wong.AndroidBatteryLifeTest.Control.InputButton
                    android:id="@+id/buttonPickDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:tag="@string/pref_test_bgn_date"
                    app:is_date_picker="true"
                    android:text="@string/button_pick_date" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone">
                <TextView
                    android:id="@+id/textViewTime"
                    android:tag="@string/pref_test_bgn_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/label_for_text_time" />
                <com.daniel4wong.AndroidBatteryLifeTest.Control.InputButton
                    android:id="@+id/buttonPickTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:tag="@string/pref_test_bgn_time"
                    app:is_time_picker="true"
                    android:text="@string/button_pick_time" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true" >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_for_text_test_period" />
                    <TextView
                        android:id="@+id/textViewTestPeriod"
                        android:tag="@string/pref_test_period_seconds"
                        style="@style/InputValueTextView"
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <com.daniel4wong.AndroidBatteryLifeTest.Control.InputButton
                    android:id="@+id/buttonTestFrequency"
                    android:tag="@string/pref_test_period_seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    app:is_number_input="true"
                    android:text="@string/button_input" />
            </RelativeLayout>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Switch
                android:id="@+id/switchScreenAlwaysOn"
                android:tag="@string/pref_screen_always_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_for_switch_screen_always_on"
                android:textOn="on"
                android:textOff="off"
                android:checked="false"
                style="@style/BaseSwitchStyle" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_for_text_screen_time" />
                    <TextView
                        android:id="@+id/textViewScreenTime"
                        android:tag="@string/pref_screen_seconds"
                        style="@style/InputValueTextView"
                        android:text="0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <com.daniel4wong.AndroidBatteryLifeTest.Control.InputButton
                    android:id="@+id/buttonScreenTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:tag="@string/pref_screen_seconds"
                    android:text="@string/button_input"
                    app:is_number_input="true" />
            </RelativeLayout>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <Switch
                android:visibility="gone"
                android:id="@+id/switchCpuAlwaysOn"
                android:tag="@string/pref_cpu_always_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="CPU always on?"
                android:textOn="on"
                android:textOff="off"
                android:checked="false"
                style="@style/BaseSwitchStyle" />
            <Switch
                android:id="@+id/switchWebRequest"
                android:tag="@string/pref_web_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_for_switch_web_request"
                android:textOn="on"
                android:textOff="off"
                android:checked="false"
                style="@style/BaseSwitchStyle" />
            <Switch
                android:id="@+id/switchGpsRequest"
                android:tag="@string/pref_gps_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_for_switch_gps_request"
                android:textOn="on"
                android:textOff="off"
                android:checked="false"
                style="@style/BaseSwitchStyle" />
            <Switch
                android:id="@+id/switchBleRequest"
                android:tag="@string/pref_ble_request"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_for_switch_ble_request"
                android:textOn="on"
                android:textOff="off"
                android:checked="false"
                style="@style/BaseSwitchStyle" />
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <Button
                        android:id="@+id/buttonCrash"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_crash" />
                    <Button
                        android:id="@+id/buttonClear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_clear" />
                    <Button
                        android:id="@+id/buttonBlack"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_black" />
                    <Button
                        android:id="@+id/buttonOnce"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_once" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">
                    <Button
                        android:id="@+id/buttonPlanTest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        android:text="@string/button_plan" />
                    <Button
                        android:id="@+id/buttonStartTest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_start" />
                    <Button
                        android:id="@+id/buttonStopTest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_stop" />
                </LinearLayout>
            </LinearLayout>
            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/layoutHomeLineChart"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="WEB" />
            <TextView
                android:id="@+id/textViewResultWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="GPS" />
            <TextView
                android:id="@+id/textViewResultGps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BLE" />
            <TextView
                android:id="@+id/textViewResultBle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true" />
        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>